[package]
name = "sfind"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "smart find utility - find files based on name or contents"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
cfg-if = "1.0.0"
clap = {version = "4.3.11", features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"]}
regex = "1.9.1"

serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.43"

[target.'cfg(not(any(target_os = "macos", target_os = "windows")))'.dependencies]
xdg = "2.5"

